# websit-crawler

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  RUN.bat  pyproject.toml  setup.py
.github/workflows/: ci.yml
config/: default_config.py
docs/: README.md
examples/: basic_usage.py  gui_usage.py
src/: __init__.py  python_webcrawler.py  webcrawler.py
tests/: __init__.py  test_crawler.py
