[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "websit-crawler"
version = "1.0.0"
description = "A comprehensive web crawling solution inspired by hakrawler"
readme = "docs/README.md"
license = {text = "MIT"}
authors = [
    {name = "Shubham"}
]
maintainers = [
    {name = "Shubham"}
]
keywords = ["web", "crawler", "scraping", "hakrawler", "async"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "aiohttp>=3.8.0",
    "beautifulsoup4>=4.11.0", 
    "lxml>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-asyncio>=0.18",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.950",
]
gui = [
    "tkinter",
]

[project.urls]
Homepage = "https://github.com/Shubhamji038/websit-crawler"
Repository = "https://github.com/Shubhamji038/websit-crawler"
Documentation = "https://github.com/Shubhamji038/websit-crawler/wiki"
"Bug Tracker" = "https://github.com/Shubhamji038/websit-crawler/issues"

[project.scripts]
webcrawler = "webcrawler:main"
webcrawler-cli = "python_webcrawler:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.bat"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
